--- a/css/estilo.css
+++ b/css/estilo.css
@@ -16,3 +16,18 @@ body {
     height: 600px;
     width: 600px;
 }
+
+.player-shooter {
+    position: relative;
+    height: 60px;
+    width: 70px;
+    left: 20px;
+    top: 25px;
+
+}
+
+.laser {
+    position: relative;
+    width: 40px;
+    height: 30px;
+}
